[project]
version = "0.3.0"
requires-python = ">=3.10"
name = "lumberkid"
description = "lumberkid"
dependencies = [
    "typer>=0.12.3",
    "iterfzf>=1.4.0.51.0",
    "pydantic>=2.8.2",
    "tomli-w>=1.0.0",
    "toml>=0.10.2",
]
classifiers = ["Programming Language :: Python :: 3.10"]

[project.license]
file = "LICENSE"

[project.scripts]
lumberkid = "lumberkid.__main__:app"
lk = "lumberkid.__main__:app"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool]
rye = { dev-dependencies = [
  "diff-cover==8.0.3",
  "pyright==1.1.350",
  "pytest==7.4.0",
  "pytest-cov==4.1.0",
  "pytest-testmon==2.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==1.0.0",
  "ruff==0.2.2",
] }

[project.urls]
homepage = "https://github.com/MartinBernstorff/lumberkid"
repository = "https://github.com/MartinBernstorff/lumberkid"
documentation = "https://MartinBernstorff.github.io/lumberkid/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
